# buddy

./: .gitignore  BETA-SETUP.md  BUG-REPORTS.md  CLAUDE.md  DATA-SAFETY-PLAN.md  HANDOFF.md  HOSTED-PLAN.md  IOS-COMPANION-PLAN.md  JOURNAL.md  LICENSE  MORNING-REPORT.md  PARITY-PLAN.md  PLAN.md  README-MAC.md  README.md  RELEASE-CHECKLIST.md  RELEASE-UPDATER.md  RELEASE.md  STATUS.md  SYNC-COMPAT.md  SYNC-HANDOFF.md  TRADEMARK.md  VALIDATION.md  index.html  package.json  styleguide.html  vercel.json
.github/workflows/: cloud-health.yml  release-mac.yml  sync-watchdog.yml  version-bump.yml
api/: bug-report.js
design/: celebration-lab.html  escalation-tokens.json
ios/: .gitignore  project.yml
ios/Buddy/: Info.plist
ios/_review/: FEEDBACK-ROUND-1.md  PARITY-REVIEW-2026-07-02.md  PROGRESS.md  SYNC-EXEC-PLAN.md  SYNC-PLAN.md  comparison.html
ios/fastlane/: Appfile  Fastfile
scripts/: buddy-asc-builds.mjs  buddy-diag.sh  buddy-sync-doctor.mjs  buddy-sync-validate.mjs  buddy-two-device.spec.js  buddy-ui-smoke.spec.js  buddy-unlink-live.spec.js  bump-version.mjs  icon-qa.sh  ios-testflight.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  gen-icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  icon.icns
src-tauri/icons/Buddy.icon/: icon.json
src-tauri/src/: lib.rs  main.rs
supabase/: README.md  config.toml  hosted-setup.sql
supabase/migrations/: 20260619022542_buddy_state.sql  20260619030000_buddy_merge_on_push.sql  20260619210000_buddy_cas.sql  20260714100000_buddy_hardening.sql  (+4 more)
(+72 files in other folders)
