[package]
name = "buddy"
version = "0.2.11"
description = "Buddy — a calm day companion that lives on the right edge of your screen."
authors = ["Whale"]
edition = "2021"
rust-version = "1.77.2"

# The library that the Tauri app binary links against.
[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-updater = "2"   # in-app auto-update from GitHub Releases
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"   # decode the bug-report screenshot from the webview

# Global shortcut is desktop-only; gate it off mobile targets.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
# Reads the OS cursor position so the whole right screen-edge can be the reveal
# trigger (a webview can only see the mouse inside its own window).
mouse_position = "0.1"

# "Reserve space when pinned": Accessibility-API window nudging (macOS only).
[target."cfg(target_os = \"macos\")".dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
